--- a/code.elephant/DomainModel/pom.xml
+++ b/code.elephant/DomainModel/pom.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>elephant</groupId>
-    <artifactId>elephant.core.contract</artifactId>
+    <parent>
+        <artifactId>code.elephant</artifactId>
+        <groupId>code.elephant</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <groupId>code.elephant</groupId>
+    <artifactId>DomainModel</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <dependencies>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>elephant.core.domainModel</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
