--- a/code.elephant/WebApp/pom.xml
+++ b/code.elephant/WebApp/pom.xml
@@ -21,6 +21,12 @@
     
     <dependencies>
         <dependency>
+            <groupId>elephant</groupId>
+            <artifactId>elephant.core.domainModel</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
