--- a/code.elephant/pom.xml
+++ b/code.elephant/pom.xml
@@ -16,12 +16,27 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>1.6</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>shade</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
     <modules>
         <module>DomainModel</module>
         <module>WebApp</module>
+        <module>Contract</module>
+        <module>Dao</module>
     </modules>
     <name>code.elephant</name>
 </project>
