--- a/code.elephant/WebApp/pom.xml
+++ b/code.elephant/WebApp/pom.xml
@@ -21,10 +21,14 @@
     
     <dependencies>
         <dependency>
-            <groupId>elephant</groupId>
-            <artifactId>elephant.core.domainModel</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>jar</type>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Dao</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>DomainModel</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
