--- a/code.elephant/Contract/pom.xml
+++ b/code.elephant/Contract/pom.xml
@@ -7,17 +7,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>Contract</artifactId>
-    <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>elephant</groupId>
-            <artifactId>elephant.core.domainModel</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>jar</type>
+            <groupId>code.elephant</groupId>
+            <artifactId>DomainModel</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
 </project>
